# md_directory_club_import

./: pyproject.toml
app/: MD410 MEMBERSHIP DATA.csv  db_handler.py  parse_officers.py
