[tool.poetry]
name = "md_directory_club_import"
version = "0.1.0"
description = "Tool to populate MD directory data from a CSV file of club officer data (in LCI's given format)"
authors = ["Kim van Wyk <vanwykk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
attr = "^0.3.1"
SQLAlchemy = "^1.3"
mysqlclient = "^1.4"
autopep8 = "^1.4"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
ptpython = {version = "^2.0",allows-prereleases = true}
flake8 = {version = "^3.7",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
